<resources>
    <string name="app_name">Labours Incharge Application</string>
    <string name="enteruserid">Enter your User Id</string>
    <string name="enterpassword">Enter your Password</string>
    <string name="userid">User-Id</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="gotoregister">Go to register page</string>
    <string name="mailid">Mail Id</string>
    <string name="name">Name</string>
    <string name="contact">Contact no</string>
    <string name="entermail">Enter your mail id</string>
    <string name="entername">Enter your name</string>
    <string name="entercontact">Enter your contact no</string>
    <string name="register">Register</string>
    <string name="company">Company</string>
    <string name="entercompany">Enter company name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="enterage">Enter your age</string>
    <string name="enterweight">Enter your weight</string>
    <string name="enterheight">Enter your height</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="gotologin">Go to Login</string>
    <string name="female">Female</string>
    <string name="profile">Profile</string>
    <string name="add_work">Add new work</string>
    <string name="see_work">View existing works</string>
    <string name="see_requests">View requests</string>
    <string name="jobDesc">Job Description</string>
    <string name="enterjobdesc">Enter the job description</string>
    <string name="noofemp">No of Employees</string>
    <string name="enternoofemp">Enter the number of employees</string>
    <string name="noofdays">No of Days</string>
    <string name="enternoofdays">Enter the number of days</string>
    <string name="salary">Salary</string>
    <string name="entersalary">Enter the salary offered</string>
    <string name="typeofwork">Type of Work</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="search_work">Search Work</string>
    <string name="view_applied">View Applied jobs</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
</resources>