<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContractorAddWorkActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center"
                android:text="Add Work" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/jobDesc"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editjobdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enterjobdesc"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingStart="15dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/typeofwork"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/typesFilter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="0dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/reasonDropDown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:inputType="none"
                    android:backgroundTint="@color/white"
                    android:maxLines="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:text="Plumber"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/noofemp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editnoofemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enternoofemp"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingStart="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/noofdays"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editnoofdays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/enternoofdays"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingStart="15dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/salary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editsalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/entersalary"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingStart="15dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addwork"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bc"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/add_work" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>