<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContractorProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profileImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/labourtwo"

                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#3f51b5"
                app:civ_shadow_radius="10dp"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="92dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/name"
                    android:inputType="none"
                    android:text="Mustafa"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/contact"
                    android:inputType="none"
                    android:text="1234567890"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/mailid"
                    android:inputType="none"
                    android:text="abcd@gmail.com"
                    android:textStyle="bold" />



            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/age"
                    android:inputType="none"
                    android:text="12"
                    android:textStyle="bold" />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/height"
                    android:inputType="none"
                    android:text="156.4"
                    android:textStyle="bold" />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/weight"
                    android:inputType="none"
                    android:text="86"
                    android:textStyle="bold" />



            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/gender"
                    android:inputType="none"
                    android:text="male"
                    android:textStyle="bold" />



            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>